# danknet

./: CMakeLists.txt  README.md  bagging.cpp  bagging_train.cpp  convolutional_layer.cpp  convolutional_layer.h  danknet.h  data.h  data2d.h  data_layer.cpp  data_layer.h  edge_detector.cpp  edge_detector_train.cpp  fully_connected_layer.cpp  fully_connected_layer.h  image_data_layer.cpp  image_data_layer.h  kohonen_maps.cpp  layer.cpp  layer.h  loss_layer.cpp  loss_layer.h  main.cpp  net.cpp  net.h  params.h  pooling_layer.cpp  pooling_layer.h  pred_data.cpp  pred_data_train.cpp  solver.cpp  solver.h  xor.cpp
include/danknet/: common.h  danknet.h  data.h  layer.h  net.h  solver.h
include/danknet/layers/: convolutional_layer.h  data_layer.h  fully_connected_layer.h  image_data_layer.h  kohonen_layer.h  loss_layer.h  pooling_layer.h  softmax_layer.h  softmax_loss_layer.h  text_data_layer.h
src/danknet/: layer.cpp  net.cpp
src/danknet/layers/: convolutional_layer.cpp  data_layer.cpp  fully_connected_layer.cpp  image_data_layer.cpp  kohonen_layer.cpp  loss_layer.cpp  pooling_layer.cpp  softmax_layer.cpp  softmax_loss_layer.cpp  text_data_layer.cpp
